--- a/network-api/networkapi/wagtailpages/templates/wagtailpages/tags/cta/callpower.html
+++ b/network-api/networkapi/wagtailpages/templates/wagtailpages/tags/cta/callpower.html
@@ -1,5 +1,19 @@
 {% load i18n static %}
 
+<div
+    class="callpower-cta tw-w-full tw-mb-12"
+    data-petition-id="{{ cta.id }}"
+    data-cta-slug="{{ page.slug }}"
+    data-cta-name="{{ cta.name }}"
+    data-cta-header="{{ cta.header | escape }}"
+    data-cta-description="{{ cta.description | escape }}"
+    data-newsletter="{{ cta.newsletter }}"
+    data-thank-you="{{ cta.thank_you }}"
+>{% trans "Loading form…" %}</div>
+
+<script src='{% static "_js/callpower.compiled.js" %}'' async defer></script>
+
+<!--
 <div class="callpower">
     <h1>{{ cta.header | safe }}</h1>
     <p>{{ cta.description | safe }}</p>
@@ -8,14 +22,12 @@
         <input type="hidden" name="campaignId" value="{{ value.campaignId }}">
         <input type="hidden" name="newsletter" value="{{ cta.newsletter }}">
 
-        <!--
         <input type="text" name="userLocation" placeholder='{% trans "Your location" %}'>
         <input type="text" name="userCountry" placeholder='{% trans "Your country" %}'>
-        -->
 
         <input type="text" name="userPhone" placeholder='{% trans "Your phone number" %}'>
     </div>
 
     <button class="make-the-call .btn .btn-primary">{% trans "Make the call" %}</button>
-    <script src='{% static "_js/callpower.compiled.js" %}'' async defer></script>
 </div>
+-->
