--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -30,6 +30,7 @@
 // React Components
 
 @import "../js/components/join/join";
+@import "../js/components/callpower/callpower";
 @import "../js/components/loading-indicator/loading-indicator";
 @import "../js/components/multipage-nav-mobile/multipage-nav-mobile";
 @import "../js/components/pulse-project-list/pulse-project-list";
