--- a/network-api/networkapi/wagtailpages/templates/wagtailpages/tags/cta/callpower.html
+++ b/network-api/networkapi/wagtailpages/templates/wagtailpages/tags/cta/callpower.html
@@ -1,33 +1,26 @@
 {% load i18n static %}
 
-<div
-    class="callpower-cta tw-w-full tw-mb-12"
-    data-petition-id="{{ cta.id }}"
-    data-cta-slug="{{ page.slug }}"
-    data-cta-name="{{ cta.name }}"
-    data-cta-header="{{ cta.header | escape }}"
-    data-cta-description="{{ cta.description | escape }}"
-    data-newsletter="{{ cta.newsletter }}"
-    data-thank-you="{{ cta.thank_you }}"
->{% trans "Loading form…" %}</div>
+<div class="callpower-cta" data-campaign-id="{{ cta.campaign_id }}" data-newsletter="{{ cta.newsletter }}">
+    <div class="cta-form">
+        <h1>{{ cta.header | safe }}</h1>
+        <p>{{ cta.description | safe }}</p>
 
-<script src='{% static "_js/callpower.compiled.js" %}'' async defer></script>
+        <div>
+            <!--
+            <input type="text" name="userLocation" placeholder='{% trans "Your location" %}'>
+            <input type="text" name="userCountry" placeholder='{% trans "Your country" %}'>
+            -->
+            <input type="text" name="userPhone" placeholder='{% trans "Your phone number" %}'>
+        </div>
 
-<!--
-<div class="callpower">
-    <h1>{{ cta.header | safe }}</h1>
-    <p>{{ cta.description | safe }}</p>
-
-    <div>
-        <input type="hidden" name="campaignId" value="{{ value.campaignId }}">
-        <input type="hidden" name="newsletter" value="{{ cta.newsletter }}">
-
-        <input type="text" name="userLocation" placeholder='{% trans "Your location" %}'>
-        <input type="text" name="userCountry" placeholder='{% trans "Your country" %}'>
-
-        <input type="text" name="userPhone" placeholder='{% trans "Your phone number" %}'>
+        <button class="make-the-call btn btn-primary" disabled>{% trans "Make the call" %}</button>
+        <button class="test-button btn btn-primary">TEST</button>
     </div>
 
-    <button class="make-the-call .btn .btn-primary">{% trans "Make the call" %}</button>
+
+    <div class="callpower-cta thank-you tw-hidden">
+        Thanks for submitting, other data here, etc.
+    </div>
 </div>
--->
+
+<script src='{% static "_js/callpower.compiled.js" %}'' async defer></script>
